# Distributed-Observability-For-Rust-Developers

./: .gitattributes  .gitignore  README.md
code/base/: Architecture.md  Cargo.toml  DOCKER_SETUP.md  docker-compose.yml
code/base/client/: package-lock.json  package.json
code/base/client/src/: global.d.ts  root.config.ts
code/base/inventory/: Cargo.toml
code/base/inventory/src/: main.rs
code/base/inventory/src/db/: mod.rs
code/base/inventory/src/handlers/: inventory.rs  pricing.rs
code/base/orders/: Cargo.toml
code/base/orders/src/: config.rs  main.rs
code/base/otelmart/: Cargo.toml  Dockerfile  config.docker.toml  config.toml
code/base/otelmart/src/: config.rs  main.rs
code/base/otelmart/src/auth/: mod.rs
code/base/otelmart/src/db/: mod.rs
code/base/otelmart/src/handlers/: users.rs
code/base/otelmart/src/models/: mod.rs
code/base/otelmart/src/proxy/: mod.rs
code/base/products/: Cargo.toml  Dockerfile  config.docker.toml
code/base/products/src/: main.rs
code/base/schemas/: README.md  generate_test_data.js
code/base/schemas/init/: 00_init.sql
code/chapter_10/: Cargo.toml  DOCKER_SETUP.md  docker-compose.yml  grafana-datasources.yaml  tokio_console.md
code/chapter_10/orders/: Cargo.toml  config.toml
code/chapter_10/orders/src/: config.rs
code/chapter_10/otelmart/: Dockerfile
code/chapter_10/schemas/data/: products_data.sql
code/chapter_10/scripts/: generate_orders_console_traffic.sh
code/chapter_13/: Cargo.toml  chapter_7.code-workspace  docker-compose.yml  dos_test.md  otel-collector-config.yaml
code/chapter_13/client/: angular.json
code/chapter_13/client/src/: app.html  app.scss  index.html
code/chapter_13/inventory/src/: config.rs  telemetry.rs
code/chapter_13/orders/: Dockerfile  config.docker.toml
code/chapter_13/orders/src/: logging.rs  main.rs  middleware.rs  telemetry.rs
code/chapter_13/otelmart/: Cargo.toml
code/chapter_13/otelmart/src/: main.rs  middleware.rs
code/chapter_13/products/: docker-compose.yml
code/chapter_13/products/src/: logging.rs
code/chapter_13/scripts/: generate_dos_traffic.sh
code/chapter_14/: Architecture.md  Cargo.toml  DOCKER_SETUP.md  docker-compose.yml  grafana-datasources.yaml
code/chapter_14/fraud_scoring/: Cargo.toml  Dockerfile  README.md  config.docker.toml  config.toml
code/chapter_14/fraud_scoring/src/: config.rs  cost.rs  errors.rs  main.rs  metrics.rs  models.rs  prompt.rs  routing.rs  telemetry.rs
code/chapter_14/fraud_scoring/src/client/: anthropic.rs  mock.rs  mod.rs
code/chapter_14/fraud_scoring/src/handlers/: mod.rs  score.rs
code/chapter_14/inventory/: Dockerfile
code/chapter_14/inventory/src/: main.rs
code/chapter_14/orders/: Cargo.toml  Dockerfile  config.docker.toml  config.toml
code/chapter_14/orders/src/: config.rs  main.rs  metrics.rs
code/chapter_14/otelmart/: Dockerfile  config.docker.toml
code/chapter_14/otelmart/src/: main.rs  telemetry.rs
code/chapter_14/products/: Cargo.toml  Dockerfile
code/chapter_14/schemas/: generate_products_enhanced.js  generate_test_products.js  test_data.sql
code/chapter_14/scripts/: generate_traffic.sh
code/chapter_4/: docker-compose.yml
code/chapter_4/client/: package.json
code/chapter_4/inventory/: Cargo.toml  config.docker.toml
code/chapter_4/orders/: Cargo.toml
code/chapter_5/: Cargo.toml  DOCKER_SETUP.md
code/chapter_5/otelmart/: Cargo.toml
code/chapter_5/otelmart/src/: main.rs
code/chapter_5/otelmart/src/handlers/: auth.rs  health.rs
code/chapter_5/otelmart/src/proxy/: mod.rs
code/chapter_5/products/: Cargo.toml
code/chapter_6/: Cargo.toml  DOCKER_SETUP.md  docker-compose.yml
code/chapter_6/inventory/: Cargo.toml
code/chapter_6/orders/: Cargo.toml  Dockerfile
code/chapter_6/otelmart/: Cargo.toml
code/chapter_6/products/: Cargo.toml
code/chapter_6/products/src/: config.rs  main.rs  telemetry.rs
code/chapter_6/products/src/handlers/: ratings.rs
code/chapter_6/products/src/models/: mod.rs  product.rs
code/chapter_6/scripts/: generate_traffic.sh
code/chapter_7/: agents.md  docker-compose.yml  grafana-datasources.yaml  loki-config.yaml
code/chapter_7/inventory/: Cargo.toml  config.toml
code/chapter_7/orders/: config.docker.toml  config.toml
code/chapter_7/otelmart/: config.toml
code/chapter_8/: Cargo.toml  docker-compose.yml  grafana-dashboard-provisioning.yaml  grafana-datasources.yaml  loki-config.yaml  prometheus-rules.yml  prometheus.yml
code/chapter_8/client/: proxy.conf.js  tsconfig.app.json
code/chapter_8/grafana-dashboards/: business-intelligence.json
code/chapter_8/otelmart/: Cargo.toml  Dockerfile
code/chapter_8/otelmart/src/proxy/: inventory.rs  orders.rs
code/chapter_8/products/: config.toml
code/chapter_8/schemas/: Dockerfile  reset_schema.sh
code/chapter_9/: .gitattributes  Cargo.toml  DOCKER_SETUP.md  docker-compose.yml
code/chapter_9/client/: package-lock.json  package.json
code/chapter_9/client/src/: app.ts  root.routes.ts
code/chapter_9/client/src/cart/: cart.component.ts
code/chapter_9/client/src/header/: header.component.ts  search.component.scss  user-profile.component.ts
code/chapter_9/client/src/products/: paginate.component.scss  product.component.html
code/chapter_9/client/src/services/: order.service.ts
code/chapter_9/inventory/: Dockerfile
code/chapter_9/inventory/src/: main.rs  metrics.rs  telemetry.rs
code/chapter_9/orders/: Cargo.toml  Dockerfile
code/chapter_9/orders/src/: crm_client.rs  main.rs  promotions_client.rs  telemetry.rs
code/chapter_9/orders/src/handlers/: orders.rs
code/chapter_9/orders/src/models/: mod.rs
code/chapter_9/otelmart/src/: main.rs  telemetry.rs
code/chapter_9/otelmart/src/handlers/: users.rs
code/chapter_9/otelmart/src/proxy/: mod.rs
code/chapter_9/products/src/: main.rs  telemetry.rs
code/chapter_9/products/src/handlers/: products.rs
code/chapter_9/schemas/: docker-compose.yml  generate_products.js
code/chapter_9/schemas/data/: Dockerfile
code/chapter_9/scripts/: profile_checkout.ps1  profile_checkout.sh
scripts/: drive_checkout.ps1
(+130 files in other folders)
