[workspace]
resolver = "2"
members = [
    "otelmart",
    "products",
    "inventory",
    "orders",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenTel Book Team"]
license = "MIT OR Apache-2.0"

[workspace.lints.clippy]
# Pedantic lints for better code quality
pedantic = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

# Style preferences
enum_glob_use = "warn"
unwrap_used = "warn"
expect_used = "warn"

# Correctness
semicolon_if_nothing_returned = "warn"
inconsistent_struct_constructor = "warn"

[workspace.dependencies]
# Web framework
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }

# Tracing & OpenTelemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = [
    "grpc-tonic", "http-proto", "reqwest-blocking-client", "trace", "metrics", "logs", "internal-logs"
] }
tracing-opentelemetry = "0.32"

# Automatic HTTP metrics middleware (git: main branch has opentelemetry 0.31 support, not yet published)
axum-otel-metrics = { git = "https://github.com/ttys3/axum-otel-metrics.git", branch = "main" }

# HTTP instrumentation
axum-tracing-opentelemetry = "0.33.0"
reqwest-middleware = { version = "0.5", features = ["json"] }
reqwest-tracing = { version = "0.7.0", features = ["opentelemetry_0_31"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate", "bigdecimal"] }

# Redis
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Utilities
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
rust_decimal = { version = "1.39.0", features = ["serde"] }
bigdecimal = { version = "0.4.9", features = ["serde"] }
anyhow = "1.0.100"
thiserror = "2.0.17"

# Configuration
toml = "0.9.8"
config = "0.14"
dotenvy = "0.15"

# HTTP client
reqwest = { version = "0.13.1", features = ["json"] }

# Security
bcrypt = "0.15"
jsonwebtoken = "9"

# URL encoding
urlencoding = "2"

# Random number generation
rand = "0.9.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# Required for cargo-flamegraph and perf profiling (maps memory addresses back to rust function names)
debug = true
# Required for musl/Alpine perf profiling to correctly unwind call stacks and preserve function nesting
force-frame-pointers = true

[profile.dev]
opt-level = 0
debug = true
