[package]
name = "fraud_scoring"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

# Tracing & OpenTelemetry
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }

# HTTP instrumentation
axum-tracing-opentelemetry = { workspace = true }
axum-otel-metrics = { workspace = true }

# HTTP client (for Anthropic API calls)
reqwest = { workspace = true }

# Async trait support
async-trait = "0.1"

# Random number generation (mock latency + jitter)
rand = { workspace = true }
