[package]
name = "otelmart"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true, features = ["macros"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs", "cors"] }

# Database
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP Client (for proxying)
reqwest = { workspace = true }

# Security
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

# URL encoding
urlencoding = { workspace = true }

# Tracing & OpenTelemetry
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }

# HTTP instrumentation
axum-tracing-opentelemetry = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-tracing = { workspace = true }

[dev-dependencies]
